--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -89,7 +89,7 @@ jobs:
               --set-string config.redis.port=${{ steps.secrets.outputs.REDIS_PORT }} \
               --set-string config.redis.password=${{ steps.secrets.outputs.REDIS_PASSWORD }} \
               --set-string config.coinMarketCap.host=${{ steps.secrets.outputs.COINMARKETCAP_HOST }} \
-              --set-string config.coinMarketCap.apiKey=${{ steps.secrets.outputs.COINMARKETCAP_API_KEY }} \
+              --set-string config.coinMarketCap.apiKey="${{ steps.secrets.outputs.COINMARKETCAP_API_KEY }}" \
               --set-string config.sodaki.host=${{ steps.secrets.outputs.SODAKI_HOST }} \
               --set-string resources.requests.cpu=100m \
               --set-string resources.requests.memory=256Mi \
@@ -155,7 +155,7 @@ jobs:
               --set-string config.redis.port=${{ steps.secrets.outputs.REDIS_PORT }} \
               --set-string config.redis.password=${{ steps.secrets.outputs.REDIS_PASSWORD }} \
               --set-string config.coinMarketCap.host=${{ steps.secrets.outputs.COINMARKETCAP_HOST }} \
-              --set-string config.coinMarketCap.apiKey=${{ steps.secrets.outputs.COINMARKETCAP_API_KEY }} \
+              --set-string config.coinMarketCap.apiKey="${{ steps.secrets.outputs.COINMARKETCAP_API_KEY }}" \
               --set-string config.sodaki.host=${{ steps.secrets.outputs.SODAKI_HOST }} \
               --set-string resources.requests.cpu=100m \
               --set-string resources.requests.memory=256Mi \
@@ -221,7 +221,7 @@ jobs:
               --set-string config.redis.port=${{ steps.secrets.outputs.REDIS_PORT }} \
               --set-string config.redis.password=${{ steps.secrets.outputs.REDIS_PASSWORD }} \
               --set-string config.coinMarketCap.host=${{ steps.secrets.outputs.COINMARKETCAP_HOST }} \
-              --set-string config.coinMarketCap.apiKey=${{ steps.secrets.outputs.COINMARKETCAP_API_KEY }} \
+              --set-string config.coinMarketCap.apiKey="${{ steps.secrets.outputs.COINMARKETCAP_API_KEY }}" \
               --set-string config.sodaki.host=${{ steps.secrets.outputs.SODAKI_HOST }} \
               --set-string resources.requests.cpu=100m \
               --set-string resources.requests.memory=256Mi \
@@ -287,7 +287,7 @@ jobs:
               --set-string config.redis.port=${{ steps.secrets.outputs.REDIS_PORT }} \
               --set-string config.redis.password=${{ steps.secrets.outputs.REDIS_PASSWORD }} \
               --set-string config.coinMarketCap.host=${{ steps.secrets.outputs.COINMARKETCAP_HOST }} \
-              --set-string config.coinMarketCap.apiKey=${{ steps.secrets.outputs.COINMARKETCAP_API_KEY }} \
+              --set-string config.coinMarketCap.apiKey="${{ steps.secrets.outputs.COINMARKETCAP_API_KEY }}" \
               --set-string config.sodaki.host=${{ steps.secrets.outputs.SODAKI_HOST }} \
               --set-string resources.requests.cpu=100m \
               --set-string resources.requests.memory=256Mi \
@@ -353,7 +353,7 @@ jobs:
               --set-string config.redis.port=${{ steps.secrets.outputs.REDIS_PORT }} \
               --set-string config.redis.password=${{ steps.secrets.outputs.REDIS_PASSWORD }} \
               --set-string config.coinMarketCap.host=${{ steps.secrets.outputs.COINMARKETCAP_HOST }} \
-              --set-string config.coinMarketCap.apiKey=${{ steps.secrets.outputs.COINMARKETCAP_API_KEY }} \
+              --set-string config.coinMarketCap.apiKey="${{ steps.secrets.outputs.COINMARKETCAP_API_KEY }}" \
               --set-string config.sodaki.host=${{ steps.secrets.outputs.SODAKI_HOST }} \
               --set-string resources.requests.cpu=100m \
               --set-string resources.requests.memory=256Mi \
